# x402-weather-api

./: .env.example  CLAUDE.md  STATUS.md  main.py  openapi.json  pyproject.toml  self_pay.py  weather.py
tests/: test_api.py  test_weather.py
